<resources>

    <string name="app_name">ereSeller</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_main">ereSeller</string>
    <string name="start_money">Starting money:</string>
    <string name="buy_price">Buying price:</string>
    <string name="sell_price">Selling price:</string>
    <string name="tax">Taxes:</string>
    <string name="ticket">Travel ticket (one way):</string>
    <string name="tax_none">None</string>
    <string name="input">Input:</string>
    <string name="output">Output:</string>
    <string name="test">A\nB</string>

</resources>