<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/textView7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10sp"
            android:text="@string/input"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10sp"
            android:text="@string/start_money"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <EditText
            android:id="@+id/money"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="number" >

            <requestFocus />
        </EditText>

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5sp"
            android:text="@string/buy_price"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <EditText
            android:id="@+id/buy_price"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="number" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5sp"
            android:text="@string/sell_price"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <EditText
            android:id="@+id/sell_price"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="number" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5sp"
            android:text="@string/tax"
            android:textAppearance="?android:attr/textAppearanceMedium" />

		<RadioGroup
           	android:id="@+id/radioGroup1"
            android:layout_width="wrap_content"
   	        android:layout_height="wrap_content"
   	        android:orientation="horizontal" >
	        
<!-- 	        <LinearLayout -->
	            android:layout_width="match_parent"
	            android:layout_height="wrap_content" >
	
			    <RadioButton
                	android:id="@+id/tax_none"
  	        	    android:layout_width="wrap_content"
    	            android:layout_height="wrap_content"
        	        android:text="@string/tax_none" />

	            <RadioButton
	                android:id="@+id/tax_cust"
	                android:layout_width="wrap_content"
	                android:layout_height="wrap_content"
	                android:layout_marginLeft="15sp"
	                android:text="" />
	
	            <EditText
	                android:id="@+id/tax_cust_value"
	                android:layout_width="44dp"
	                android:layout_height="wrap_content"
	                android:layout_marginLeft="5sp"
	                android:ems="10"
             	   android:inputType="number" />

	            <TextView
	                android:id="@+id/textView6"
	                android:layout_width="wrap_content"
	                android:layout_height="wrap_content"
	                android:layout_marginLeft="5sp"
	                android:text="%"
	                android:textAppearance="?android:attr/textAppearanceMedium" />
            
<!--         	</LinearLayout> -->
        </RadioGroup>

        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5sp"
            android:text="@string/ticket"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <EditText
            android:id="@+id/ticket"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="number" />

        <TextView
            android:id="@+id/textView8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10sp"
            android:text="@string/output"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <TextView
            android:id="@+id/textView9"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5sp"
            android:lines="3"
            android:text="" />

    </LinearLayout>
</ScrollView>
